chore: remove unused links

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>Home</title>
@@ -9,7 +9,7 @@
   <body>
     <div class="everything">
       <div id="time" class="time"></div>
-      <form action="https://gowogle.voring.me/search" method="GET">
+      <form action="https://www.google.com/search" method="GET">
         <input
           autofocus
           name="q"
@@ -22,8 +22,6 @@
       <div class="box">
         <div class="link">
           <ul>
-            <li><a href="https://stop.voring.me">misskey</a></li>
-            <li><a href="https://pixelfed.social/i/web">pixelfed</a></li>
             <li><a href="https://github.com">github</a></li>
             <li><a href="https://reddit.com">reddit</a></li>
           </ul>
@@ -31,9 +29,7 @@
         <div class="link">
           <ul>
             <li><a href="https://youtube.com">youtube</a></li>
-            <li><a href="https://soundcloud.com/">soundcloud</a></li>
-            <li><a href="https://zoro.to">zoro</a></li>
-            <li><a href="https://tilvids.com">peertube</a></li>
+            <li><a href="https://jw.org">jw.org</a></li>
           </ul>
         </div>
         <!-- Feel free to add more divs here -->
